welcome.lessons.welcome.loopwhile.WhileMoria.scala.code


	while(!estDosMur())
	{
		while(!estSurBiscuit())
		{

			recule();

		}
	prendBiscuit();
		avance();
		poseBiscuit();
		while(!estSurBiscuit)*
	{

	avance();
	
	}
recule();
poseBiscuit();
}
droite();
	recule();
	droite();
	avance()